--- a/package.json
+++ b/package.json
@@ -11,5 +11,12 @@
     "next": "10.0.7",
     "react": "17.0.1",
     "react-dom": "17.0.1"
+  },
+  "devDependencies": {
+    "gulp": "4.0.2",
+    "gulp-sass": "4.1.0",
+    "gulp-watch": "5.0.1",
+    "gulp-concat": "2.6.1",
+    "gulp-uglifycss": "1.1.0"
   }
 }
